--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,4 +4,17 @@ services:
     build: .
     ports:
       - "127.0.0.1:42124:8080"
+    volumes:
+      - ***REMOVED***:***REMOVED***
+      - ***REMOVED******REMOVED***:***REMOVED***
+      - ***REMOVED***:***REMOVED***
+      - ***REMOVED******REMOVED***:***REMOVED***
+      - ***REMOVED******REMOVED***:***REMOVED***
+      - ***REMOVED******REMOVED***:***REMOVED***
+      - ***REMOVED******REMOVED***:***REMOVED***
+      # - ***REMOVED******REMOVED***:***REMOVED******REMOVED***
+      - ***REMOVED***:***REMOVED***
+      - ***REMOVED******REMOVED***:***REMOVED***
+      - ***REMOVED******REMOVED***:***REMOVED***
+      - ***REMOVED******REMOVED***:***REMOVED***
     restart: unless-stopped
